# vDNN

./: CMakeLists.txt
include/: alexnet.h  neural_net.h  solver.h  utils.h  vgg16.h  vgg19.h
src/: alexnet_test.cu  layer_params.cu  main.cu  mnist_test.cu  neural_net.cu  neural_net_time.cu  slow_conv.cu  solver.cu  vgg_test.cu
